@startuml

title __COST's Class Diagram__\n

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.cost {
            class CostModelFactory {
                {static} + createCostModel()
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.cost {
            enum CostModelTypes {
              NONE
              THROUGHPUT
              THROUGHPUT_LATENCY
              SHARING_DEGREE
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.cost {
            interface ICostModel {
                {abstract} + getOrderCost()
                {abstract} + getMPTCost()
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.cost {
            class SharingDegreeCostModel {
                + getOrderCost()
                + getMPTCost()
                - recursiveCountNodes()
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.cost {
            class ThroughputCostModel {
                # costsOfLastOrderStates : HashMap<EventType, Double>
                + getOrderCost()
                + getMPTCost()
                - recursiveGetCost()
            }
          }
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.nfa {
      package sase.sase.evaluation.nfa.lazy {
        package sase.sase.evaluation.nfa.lazy.order {
          package sase.sase.evaluation.nfa.lazy.order.cost {
            class ThroughputLatencyCostModel {
                - throughputToLatencyRatio : Double
                - totalOrderOfEventTypes : List<EventType>
                - lastEventType : EventType
                + ThroughputLatencyCostModel()
                - getMissingTypes()
                + getOrderCost()
                + getRatio()
            }
          }
        }
      }
    }
  }
  

  SharingDegreeCostModel -up-|> ICostModel
  ThroughputCostModel -up-|> ICostModel
  ThroughputLatencyCostModel -up-|> ICostModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
